--- a/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
+++ b/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
@@ -34,3 +34,7 @@
         </div>
     </div>
 </div>
+
+<div style="left: 20px; position: absolute; top: 75px; border: 1px solid black; width: 70%; height: 10%;">
+    
+</div>
