--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" href="styles/trivia/chat.css"/>
       <link rel="stylesheet" href="styles/trivia/generalTrivia.css" />
       <link rel="stylesheet" href="styles/settings/settings.css"/>
+      <link href="styles/leaderboards/leaderboards.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
   <body ng-app="webTrivialWikiApp">
@@ -85,6 +86,9 @@
     <script src="scripts/User/Login/loginService.js"></script>
     <script src="scripts/User/Login/loginController.js"></script>
     <script src="scripts/User/SignUp/signUpService.js"></script>
+    <script src="scripts/Leaderboard/leaderboardModule.js"></script>
+    <script src="scripts/Leaderboard/leaderboardService.js"></script>
+    <script src="scripts/Leaderboard/leaderboardController.js"></script>
     <script src="scripts/User/SignUp/signUpController.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/Directives/header/headerDirective.js"></script>
@@ -96,7 +100,7 @@
     <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
     <script src="scripts/User/Settings/settingsController.js"></script>
     <script src="scripts/Trivia/signalRFactory.js"></script>
-    <script src="scripts/Trivia/Game/chatService.js"></script>
+    <script src="scripts/Trivia/Game/triviaService.js"></script>
     <script src="scripts/User/Avatar/changeAvatarController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarService.js"></script>
     <script src="scripts/User/Settings/changePasswordController.js"></script>
