--- a/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
+++ b/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
@@ -1,7 +1,7 @@
 ﻿<div class="header headerContainer">
     <div class="wikiLogo">
         <img class="wiki-logo-image" src="images/wikipedia-icon2.png" ng-click="javascript(0);"/>
-        <span class="wikiTitle" ng-click="javascript(0);">WikiTrivia</span>
+        <span class="wikiTitle" ng-click="goToHomePage()">WikiTrivia</span>
         <ul class="navigation-bar">
             <li class="hvr-underline-from-center small-padding-bottom">
                 <a class="sliding-middle-out" ng-click="openLoginModal()" ng-show="!userIsLoggedIn">Login</a>
@@ -10,7 +10,7 @@
                 <a ng-click="openTrivia()">QuizTriv</a>
             </li>
             <li class="hvr-underline-from-center small-padding-bottom">
-                <a ng-show="userIsLoggedIn">Leaderboards</a>
+                <a ng-show="userIsLoggedIn" ng-click="openLeaderboards()">Leaderboards</a>
             </li>
             <li class="hvr-underline-from-center small-padding-bottom" ng-show="userRole === 'Admin'">
                 <a ng-click="openUserManagement()">Manage users</a>
