--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="bower_components/hover/css/hover.css" />
     <link rel="stylesheet" href="bower_components/angular-growl-v2/build/angular-growl.css" />
     <link rel="stylesheet" href="bower_components/loaders.css/loaders.css" />
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -29,15 +31,12 @@
       <link href="styles/leaderboards/leaderboards.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
-  <body ng-app="webTrivialWikiApp">
+<body ng-app="webTrivialWikiApp" ng-cloak layout="column" ng-controller="headerController">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
     <div>
-        <!-- ReSharper disable Html.TagNotResolved -->
         <header-menu on-scroll></header-menu>
-        <!-- ReSharper restore Html.TagNotResolved -->
     </div>
 
     <div style="width: 100% !important;">
@@ -70,6 +69,10 @@
     <script src="bower_components/angular-img-cropper/dist/angular-img-cropper.min.js"></script>
     <script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
