--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -100,11 +100,14 @@
     <script src="scripts/Admin/ManageUsers/Modals/confirmDeleteController.js"></script>
     <script src="scripts/Admin/ManageUsers/Modals/updateUserController.js"></script>
     <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
+    <script src="scripts/Admin/ManageQuestions/manageQuestionsService.js"></script>
+    <script src="scripts/Admin/ManageQuestions/manageQuestionsController.js"></script>
     <script src="scripts/User/Settings/settingsController.js"></script>
     <script src="scripts/Trivia/signalRFactory.js"></script>
     <script src="scripts/Trivia/Game/triviaService.js"></script>
     <script src="scripts/User/Avatar/changeAvatarController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarService.js"></script>
     <script src="scripts/User/Settings/changePasswordController.js"></script>
+    
   </body>
 </html>
