--- a/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
+++ b/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
@@ -47,7 +47,7 @@
             <span style="font-weight: 300; font-size: 16px;">{{question.MessageText}}</span>
         </div>
     </div>
-    <div style="position: absolute; bottom: 0; border-top: 1px solid #ccc; height:12%">
+    <div style="position: absolute; bottom: 0; border-top: 1px solid #ccc; height: 12%">
         <div class="form-group sent-message-input">
             <div class="input-group input-group-sm">
                 <div class="icon-addon addon-md">
@@ -61,4 +61,9 @@
             </div>
         </div>
     </div>
+</div>
+
+
+<div style="position: absolute; left: 15px; bottom: 15px;">
+    <button class="btn btn-default" ng-click="addNewTopic()"> Add topic</button>
 </div>
