Advanced with question generation

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/loaders.css/loaders.css" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -73,6 +74,7 @@
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -102,12 +104,12 @@
     <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
     <script src="scripts/Admin/ManageQuestions/manageQuestionsService.js"></script>
     <script src="scripts/Admin/ManageQuestions/manageQuestionsController.js"></script>
+    <script src="scripts/Admin/stopEventDirective.js"></script>
     <script src="scripts/User/Settings/settingsController.js"></script>
     <script src="scripts/Trivia/signalRFactory.js"></script>
     <script src="scripts/Trivia/Game/triviaService.js"></script>
     <script src="scripts/User/Avatar/changeAvatarController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarService.js"></script>
     <script src="scripts/User/Settings/changePasswordController.js"></script>
-    
   </body>
 </html>
