Frontend notifications + get wikipedia image for topic

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -5,6 +5,7 @@
     <title>WikiTrivia</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="images/wikipedia-icon.png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
+    <link rel="stylesheet" href="bower_components/angular-notification-icons/dist/angular-notification-icons.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -75,6 +77,7 @@
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-notification-icons/dist/angular-notification-icons.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -95,6 +98,8 @@
     <script src="scripts/Leaderboard/leaderboardController.js"></script>
     <script src="scripts/User/SignUp/signUpController.js"></script>
     <script src="scripts/config.js"></script>
+    <script src="scripts/directives/dropdownPreventClose.js"></script>
+    <script src="scripts/directives/header/headerService.js"></script>
     <script src="scripts/Directives/header/headerDirective.js"></script>
     <script src="scripts/Directives/header/headerController.js"></script>
     <script src="scripts/Admin/ManageUsers/manageUsersController.js"></script>
