--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -31,10 +31,11 @@
       <link rel="stylesheet" href="styles/trivia/chat.css"/>
       <link rel="stylesheet" href="styles/trivia/generalTrivia.css" />
       <link rel="stylesheet" href="styles/settings/settings.css"/>
+      <link href="styles/topics/topics.css" rel="stylesheet" />
       <link href="styles/leaderboards/leaderboards.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
-<body ng-app="webTrivialWikiApp" ng-cloak layout="column" ng-controller="headerController">
+<body ng-app="webTrivialWikiApp" ng-cloak layout="column">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -89,7 +90,8 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/User/persistService.js"></script>
     <script src="scripts/User/userService.js"></script>
-    <script src="scripts/headerAnimationOnScroll.js"></script>
+    <script src="scripts/headerAnimationOnScroll.js"></script>    
+    <script src="scripts/notificationsFactory.js"></script>
     <script src="scripts/User/Login/loginService.js"></script>
     <script src="scripts/User/Login/loginController.js"></script>
     <script src="scripts/User/SignUp/signUpService.js"></script>
@@ -100,8 +102,8 @@
     <script src="scripts/config.js"></script>
     <script src="scripts/directives/dropdownPreventClose.js"></script>
     <script src="scripts/directives/header/headerService.js"></script>
-    <script src="scripts/Directives/header/headerDirective.js"></script>
-    <script src="scripts/Directives/header/headerController.js"></script>
+    <script src="scripts/directives/header/headerDirective.js"></script>
+    <script src="scripts/directives/header/headerController.js"></script>
     <script src="scripts/Admin/ManageUsers/manageUsersController.js"></script>
     <script src="scripts/Admin/ManageUsers/manageUsersService.js"></script>
     <script src="scripts/Admin/ManageUsers/Modals/confirmDeleteController.js"></script>
@@ -109,6 +111,8 @@
     <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
     <script src="scripts/Admin/ManageQuestions/manageQuestionsService.js"></script>
     <script src="scripts/Admin/ManageQuestions/manageQuestionsController.js"></script>
+    <script src="scripts/Admin/ManageTopics/manageTopicsService.js"></script>
+    <script src="scripts/Admin/ManageTopics/manageTopicsController.js"></script>
     <script src="scripts/Admin/stopEventDirective.js"></script>
     <script src="scripts/User/Settings/settingsController.js"></script>
     <script src="scripts/Trivia/signalRFactory.js"></script>
@@ -116,5 +120,9 @@
     <script src="scripts/User/Avatar/changeAvatarController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarService.js"></script>
     <script src="scripts/User/Settings/changePasswordController.js"></script>
+    <script src="scripts/Topics/topicsModule.js"></script>
+    <script src="scripts/Topics/topicsController.js"></script>
+    <script src="scripts/Topics/topicsService.js"></script>
+    <script src="scripts/Topics/proposeTopicController.js"></script>
   </body>
 </html>
